--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@vitejs/plugin-react": "^2",
     "autoprefixer": "^10.4.13",
     "drizzle-kit": "^0.23.0",
+    "path-browserify": "^1.0.1",
     "postcss": "^8.4.19",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
