--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "prop-types": "^15.8.1",
     "tailwindcss": "^3.2.4",
+    "util": "^0.12.5",
     "vite": "^3"
   },
   "main": "index.js",
