--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-joyride": "^2.9.3",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.4.4",
     "rehype-highlight": "^7.0.0",
